[gd_scene load_steps=8 format=2]

[ext_resource path="res://enemies/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://enemies/tall.png" type="Texture" id=2]
[ext_resource path="res://enemies/TallEnemy.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 11 )

[sub_resource type="Animation" id=2]
resource_name = "walk"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 3, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4, 12 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 7, 12 )

[node name="TallEnemy" instance=ExtResource( 1 )]
script = ExtResource( 3 )
MAX_SPEED = 4

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 2 )
hframes = 5

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( 0, 1 )
shape = SubResource( 1 )

[node name="AnimationPlayer" parent="." index="2"]
autoplay = "walk"
anims/walk = SubResource( 2 )

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 3 )

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 4 )

[node name="LeftFloor" type="RayCast2D" parent="." index="6"]
position = Vector2( -6, 12 )
enabled = true
cast_to = Vector2( 0, 4 )
collision_mask = 2147483650

[node name="LeftWall" type="RayCast2D" parent="." index="7"]
position = Vector2( -4, 0 )
enabled = true
cast_to = Vector2( -4, 0 )
collision_mask = 2

[node name="RightWall" type="RayCast2D" parent="." index="8"]
position = Vector2( 4, 0 )
enabled = true
cast_to = Vector2( 4, 0 )
collision_mask = 2

[node name="RightFloor" type="RayCast2D" parent="." index="9"]
position = Vector2( 6, 12 )
enabled = true
cast_to = Vector2( 0, 4 )
collision_mask = 2

[node name="headpos" type="Position2D" parent="." index="10"]
position = Vector2( 0, -8 )

[editable path="Hitbox"]

[editable path="Hurtbox"]
